--- a/app/page.module.css
+++ b/app/page.module.css
@@ -103,3 +103,26 @@
   line-height: 24px;
   color: #244265;
 }
+
+.blogPostLink {
+  padding: 10px 0;
+  grid-area: bottom;
+  width: 100%;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.githubLink {
+  text-align: center;
+  color: #1d2134;
+  text-decoration: underline;
+  font-size: 14px;
+}
+
+.wizardLink {
+  color: black;
+  text-decoration: none;
+}
