--- a/app/page.module.css
+++ b/app/page.module.css
@@ -12,7 +12,12 @@
   box-shadow: #e2eaf4 0px 5px 60px;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 750px;
+  max-width: 850px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
 }
 
 .loaderHolder {
@@ -113,7 +118,7 @@
 }
 
 .blogPostLink {
-  padding: 10px 0;
+  padding: 10px 0 15px 0;
   grid-area: bottom;
   width: 100%;
   background: #ffffff;
@@ -121,6 +126,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
+  border-top: 1px solid #eef3f9;
 }
 
 .githubLink {
@@ -131,6 +137,39 @@
 }
 
 .wizardLink {
-  color: black;
+  color: #1d2134;
+  opacity: 0.5;
   text-decoration: none;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.wizardLink:hover {
+  opacity: 1;
+}
+
+.loadingHolder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loadingHolder p {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #1d2134;
+}
+
+.poweredBy {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+
+.poweredBy p {
+  font-size: 12px;
+  color: white;
+  margin-right: 5px;
 }
