--- a/app/page.module.css
+++ b/app/page.module.css
@@ -189,3 +189,47 @@
     opacity: 1;
   }
 }
+
+.select {
+  /* Reset Select */
+  appearance: none;
+  font-size: 15px;
+  outline: 0;
+  border: 0;
+  box-shadow: none;
+  /* Personalize */
+  flex: 1;
+  padding: 0 1em;
+  color: #244265;
+  background-color: #eef3f9;
+  background-image: none;
+  cursor: pointer;
+}
+/* Remove IE arrow */
+.select::-ms-expand {
+  display: none;
+}
+/* Custom Select wrapper */
+.selectHolder {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 3em;
+  border-radius: 5px;
+  overflow: hidden;
+}
+/* Arrow */
+.selectHolder::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1em;
+  background-color: #eef3f9;
+  transition: 0.25s all ease;
+  pointer-events: none;
+}
+/* Transition */
+.selectHolder:hover::after {
+  color: #fc884b;
+}
